--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               seamless, modern user experiences. I focus on logic, scalability, and clean code.
             </p>
 
-            <a href="#" class="btn btn-modern">
+            <a href="assests/PrabashWithanachchiResume (3).pdf" class="btn btn-modern">
               DOWNLOAD CV <i class="fa-solid fa-cloud-arrow-down"></i>
             </a>
 
@@ -247,6 +247,7 @@
               <a href="https://www.linkedin.com/in/prabash-withanachchi/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               <a href="#"><i class="fab fa-pinterest-p"></i></a>
               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="https://medium.com/@prabashwithanachchi"><i class="fab fa-medium"></i></a>
             </div>
           </div>
 
@@ -264,7 +265,7 @@
                     <i class="fa-solid fa-code text-black"></i>
                   </div>
                   <div>
-                    <h6 class="mb-0 fw-bold">Java</h6>
+                    <h6 class="mb-0 fw-bold">Java Enthusiast</h6>
                     <small class="text-muted">Backend Architecture</small>
                   </div>
                 </div>
