--- a/portfolio.html
+++ b/portfolio.html
@@ -127,8 +127,9 @@
     <div class="glow glow-right"></div>
 
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html" style="color:var(--accent)">PRABASH.DEV</a>
+        
+              <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">PRABASH<span style="color:var(--accent)">.DEV</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -205,6 +206,66 @@
             </div>
 
         </div>
+
+ <div class="row g-4 justify-content-center" style="margin-top: 20px;">
+            
+            <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                <div class="card">
+                    <img src="/img/frist-project.png" class="card-img-top" alt="AI Travel Guide">
+                    <div class="card-body">
+                        <div class="mb-2">
+                            <span class="tech-badge">Gemini AI</span>
+                            <span class="tech-badge">Bootstrap</span>
+                            <span class="tech-badge">JS</span>
+                        </div>
+                        <h5 class="card-title">AI Travel Guide Web App</h5>
+                        <p class="card-text">From sleek UI design to intelligent destination insights using Google Gemini AI. Makes trip planning smarter and more engaging.</p>
+                        <div class="d-flex gap-2 mt-4">
+                            <a href="https://lnkd.in/dVdT-HH2" class="btn-project btn-live">Live Demo</a>
+                            <a href="https://lnkd.in/dd5_saB6" class="btn-project btn-git">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400x250/111/333" class="card-img-top" alt="Project 2">
+                    <div class="card-body">
+                        <div class="mb-2">
+                            <span class="tech-badge">Java</span>
+                            <span class="tech-badge">MySQL</span>
+                        </div>
+                        <h5 class="card-title">Inventory System</h5>
+                        <p class="card-text">A robust backend solution for managing warehouse stock levels with real-time database updates and reporting logic.</p>
+                        <div class="d-flex gap-2 mt-4">
+                            <a href="#" class="btn-project btn-live">Live Demo</a>
+                            <a href="#" class="btn-project btn-git">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400x250/111/333" class="card-img-top" alt="Project 3">
+                    <div class="card-body">
+                        <div class="mb-2">
+                            <span class="tech-badge">HTML/CSS</span>
+                            <span class="tech-badge">Responsive</span>
+                        </div>
+                        <h5 class="card-title">E-Commerce UI</h5>
+                        <p class="card-text">Modern, mobile-first shopping experience with clean product grids and smooth transition effects.</p>
+                        <div class="d-flex gap-2 mt-4">
+                            <a href="#" class="btn-project btn-live">Live Demo</a>
+                            <a href="#" class="btn-project btn-git">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
