--- a/resume.html
+++ b/resume.html
@@ -122,7 +122,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
       <div class="container">
         <a class="navbar-brand fw-bold" href="index.html">PRABASH<span
-            style="color:var(--accent)">.</span></a>
+            style="color:var(--accent)">.DEV</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
