--- a/resume.html
+++ b/resume.html
@@ -209,6 +209,15 @@
             class="skill-badge">Standalone Apps</div></div>
         <div class="col-6 col-md-3" data-aos="zoom-in"><div
             class="skill-badge">REST APIs</div></div>
+                  <div class="col-6 col-md-3" data-aos="zoom-in"><div
+            class="skill-badge">UI/UX</div></div>
+                  <div class="col-6 col-md-3" data-aos="zoom-in"><div
+            class="skill-badge">Linux</div></div>
+                  <div class="col-6 col-md-3" data-aos="zoom-in"><div
+            class="skill-badge">Python</div></div>
+                  <div class="col-6 col-md-3" data-aos="zoom-in"><div
+            class="skill-badge">AWS</div></div>
+
       </div>
 
       <h2 data-aos="fade-right">About <span>Me</span></h2>
