--- a/services.html
+++ b/services.html
@@ -101,13 +101,14 @@
         }
 
         .card-title {
+            color: #cbd5e1;
             font-weight: 700;
             margin-bottom: 15px;
             font-size: 1.3rem;
         }
 
         .card-text {
-            color: var(--text-muted);
+           color: var(--text-muted);
             font-size: 0.9rem;
             line-height: 1.7;
         }
