make image showing issue

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               
               <div class="profile-container">
                 <div class="rotating-ring"></div>
-                <img src="/img/img.JPG" alt="Prabash Withanachchi" class="main-profile-img">
+                <img src="./img/img.JPG" alt="Prabash Withanachchi" class="main-profile-img">
               </div>
 
               <div class="floating-badge" style="bottom: 20px; left: -20px;">
