--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
             
             <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="card">
-                    <img src="/img/frist-project.png" class="card-img-top" alt="AI Travel Guide">
+                    <img src="./img/frist-project.png" class="card-img-top" alt="AI Travel Guide">
                     <div class="card-body">
                         <div class="mb-2">
                             <span class="tech-badge">Gemini AI</span>
@@ -171,7 +171,7 @@
 <!-- 2nd card -->
             <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="card">
-                    <img src="/img/portfolio.png" class="card-img-top" alt="Project 2">
+                    <img src="./img/portfolio.png" class="card-img-top" alt="Project 2">
                     <div class="card-body">
                         <div class="mb-2">
                             <span class="tech-badge">CSS</span>
@@ -193,7 +193,7 @@
             <!-- 3rd card -->
             <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="card">
-                    <img src="/img/weather1.png" class="card-img-top" alt="Project 3">
+                    <img src="./img/weather1.png" class="card-img-top" alt="Project 3">
                     <div class="card-body">
                         <div class="mb-2">
                             <span class="tech-badge">HTML/CSS/JS</span>
@@ -218,7 +218,7 @@
             
             <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="card">
-                    <img src="/img/healthNet.png" class="card-img-top" alt="AI Travel Guide">
+                    <img src="./img/healthNet.png" class="card-img-top" alt="AI Travel Guide">
                     <div class="card-body">
                         <div class="mb-2">
                             <span class="tech-badge">JavaFX </span>
